Use xsltproc instead of Xalan
See ukf/ukf-meta#159.